remediation/network-ec2-vpc/fix-prowler_ec2_networkacl_allow_ingress_any_port_arn_aws_ec2_ap_southeast_1_132410971304_network_acl_acl_04f1a439902c4ba67_ap_northeast_2.tf
resource "aws_network_acl" "acl-04f1a439902c4ba67_87a205d7c8" {
  vpc_id     = "vpc-0123456789abcdef"
  subnet_ids = ["subnet-0123456789abcdef", "subnet-fedcba9876543210"]

  ingress {
    from_port  = 0
    to_port    = 0
    rule_no    = 100
    action     = "deny"
    cidr_block = "0.0.0.0/0"
    protocol   = "-1"
  }

  egress {
    from_port  = 0
    to_port    = 0
    rule_no    = 100
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    protocol   = "-1"
  }
}
